--- a/views/screens/login.mustache
+++ b/views/screens/login.mustache
@@ -8,7 +8,7 @@
 							<img src="{{app.logo}}" height="50" alt="{{app.title}}" class="auth-logo">
 						</a>
 						<h4 class="mt-3 mb-1 fw-semibold text-white font-18">Let's Get Started</h4>   
-						<p class="text-muted  mb-0">Sign in...</p>  
+						<p class="text-muted mb-0">Sign in to {{app.title}}</p>  
 					</div>
 				</div>
 				<div class="card-body pt-0">
@@ -56,7 +56,7 @@
 					{{/app.allowRegistration}}
 					
 				</div><!--end card-body-->
-				<div class="card-body bg-light-alt text-center">
+				<div class="card-body bg-light-alt text-center auth-footer-box">
 					{{{ app.copyright }}}
 				</div>				
 			</div><!--end card-->
