--- a/views/screens/register.mustache
+++ b/views/screens/register.mustache
@@ -42,7 +42,7 @@
 							<div class="col-12">
 								<div class="form-check form-switch form-switch-success">
 									<input class="form-check-input" type="checkbox" id="terms">
-									<label class="form-check-label" for="terms">By registering you agree to the <a href="#" class="text-primary">Terms of Use</a></label>
+									<label class="form-check-label" for="terms">By registering you agree to the <a href="#" class="text-primary">terms of use</a></label>
 								</div>
 							</div><!--end col-->
 						</div><!--end form-group-->
