--- a/views/template.mustache
+++ b/views/template.mustache
@@ -4,12 +4,12 @@
 		<meta charset="utf-8" />
 		<title>{{title}}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta content="<?php echo App::parameter('description'); ?>" name="description" />
+		<meta content="{{description}}" name="description" />
 		<meta content="" name="author" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="<?php echo App::parameter('icon'); ?>">
+		<link rel="shortcut icon" href="{{icon}}">
 
 		<!-- Stylesheets -->
 		{{#stylesheets}}
